# fdtd-waveguide

./: .gitignore  Cargo.toml  README.md  config.toml
analysis/: analysis.jl  contour_slice.jl  dual_fft.py  fft.py  make_video.ps1  plot_volume.py  slice_view.py  streamplot.py
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/driver/: all.html  fn.main.html
doc/src/driver/: main.rs.html
doc/src/waveguide/: lib.rs.html
doc/src/waveguide/engine/: mod.rs.html
doc/src/waveguide/geometry/: mod.rs.html
doc/waveguide/: constant.EP_0.html  constant.ETA_0.html  sidebar-items.js
doc/waveguide/engine/: constant.ONE_OVER_TWO.html  sidebar-items.js  struct.Engine.html  struct.ScalarField.html
doc/waveguide/geometry/: index.html  sidebar-items.js  struct.Geometry.html
doc/waveguide/solver/: sidebar-items.js  struct.Config.html  struct.Solver.html
docs/driver/: fn.main.html  index.html
docs/waveguide/: all.html  constant.C_0.html  constant.MU_0.html  index.html
docs/waveguide/engine/: constant.TFSF_SRC_IDX.html  index.html  struct.Engine.html  struct.ScalarField.html
docs/waveguide/geometry/: struct.Geometry.html
docs/waveguide/solver/: index.html  struct.Config.html  struct.Solver.html
report/: appendix.tex  cem_class_example_bib.bib  conclusion.tex  ece618_project1_report_sam_wyss.tex  intro.tex  mathematical-model.tex  numerical-results.tex  waveport_bc.tex
report/figures/: Figures.pptx
src/: lib.rs  main.rs
src/engine/: mod.rs
src/geometry/: mod.rs
src/helpers/: mod.rs
src/solver/: mod.rs
(+10 files in other folders)
