[package]
name = "fdtd_waveguide"
version = "1.0.0"
edition = "2021"

[lib]
name = "waveguide"
path = "src/lib.rs"

[[bin]]
name = "driver"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = { version = "*" }
serde = { version = "*" }
serde_derive = { version = "*" }
anyhow = { version = "*" }
csv = {version = "*"}